Fix icon spacing for icon buttons

--- a/src/app/shared/styles/icons.scss
+++ b/src/app/shared/styles/icons.scss
@@ -1,3 +1,7 @@
 .material-icons {
   font-size: $erz-icon-size;
 }
+
+.btn .material-icons {
+  display: block;
+}
